# GroceryStoreData

./: .gitignore  CHANGELOG.md  README.md  analysis-catalog.html  analysis_workbook.py  api-reference.html  complete-dgp.html  generate_dataset.py  ground-truth.html  index.html  pyproject.toml  robots.txt  search.json  sitemap.xml  styles.css  theory.html
.github/workflows/: publish-site.yml  tests.yml
analyses/: advanced-methods.html  analysis_workbook.py  case-description.html  clean_and_describe.py  configurator.py  diagnose_causes.py  expansion_review.py  generated-briefs.html  index.html  malm-market.html  policy_lab.py  stakeholder-report.html  technical-report.html  three_year_review.py
archive/: generate_dataset.py
archive/analyses/: analysis_workbook.py  catalog_walkthrough.py  clean_and_describe.py  competitor_entry_study.py  configurator.py  diagnose_causes.py  expansion_review.py  learn_structure.py  policy_lab.py  predict_and_warn.py  prescribe.py  three_year_review.py
archive/datagen/: __init__.py  export.py  keys.py  params.py  phase2.py  scenarios.py  validate.py
cases/: README.md
cases/3y_baseline/: ANALYSIS_REPORT.md  BUSINESS_CASE.md  BUSINESS_CASE_INSTRUCTOR.md  analysis_notebook.py
cases/extreme_stress_test/: analysis_notebook.py
cases/story_quality_check/: analysis_notebook.py
data/hidden/: cost_paths.csv  event_log.csv  guests.csv  hidden_demand.csv  profit_triptych.csv  tilts.csv  weather_full.csv
data/scenarios/: comparison.csv
data/visible/: calendar.csv  price_history.csv  promotions.csv  tax_statement.csv  write_offs.csv
datagen/: __init__.py  export.py  keys.py  params.py  phase1.py  phase2.py  phase3.py  recording.py  scenarios.py  validate.py  world.py
documents/: ACCOUNTING.md  ANALYSIS_CATALOG.md  ANALYSIS_INSTRUCTIONS.md  CASE_WRITING_GUIDE.md  PHASE1_DETAILS.md  PHASE2_DETAILS.md  PHASE3_DETAILS.md  PHASE4_DETAILS.md  PHASE5_DETAILS.md
draft/: Chinh - 20260414 - Data Generation Process.py
package/: LICENSE  README.md  pyproject.toml
package/grocery_sim/: SKUs.xlsx  __init__.py  analysis.py  describe.py  events.py  export.py  keys.py  params.py  persona.py  phase1.py  phase2.py  phase3.py  recording.py  scenarios.py  schema.py  settings.py  simulation.py  validate.py  world.py
package/tests/: conftest.py  test_describe_integration.py  test_describe_unit.py  test_persona.py  test_settings.py  test_simulation.py
paper/: jose_paper.bib  jose_paper.md  paper.tex
site/: _quarto.yml  analysis-catalog.qmd  api-reference.qmd  complete-dgp.qmd  ground-truth.qmd  index.qmd  styles.css  theory.qmd
site/analyses/: advanced-methods.qmd  index.qmd  (+5 more)
(+167 files in other folders)
