[project]
name = "data-generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.4",
    "fastexcel>=0.20.2",
    "marimo>=0.23.1",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "plotly>=6.9.0",
    "polars>=1.42.1",
    "pulp>=3.3.2",
    "pyarrow>=25.0.0",
    "scikit-learn>=1.9.0",
    "statsmodels>=0.14.6",
]

[dependency-groups]
dev = [
    "kaleido>=1.3.0",
]
