[project]
name = "grocery-sim"
version = "0.1.2"
description = "A standalone structural microsimulation of a neighborhood grocery store, with a fully known generating process."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ChinhMai", email = "chinhmai.work@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.4",
    "marimo>=0.23.1",
    "numpy>=2.5.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2",
    "pulp>=3.3.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/ChinhMaiGit/GroceryStoreData"
Repository = "https://github.com/ChinhMaiGit/GroceryStoreData"
"Paper" = "https://github.com/ChinhMaiGit/GroceryStoreData/blob/main/paper/paper.pdf"

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["grocery_sim"]

[tool.hatchling.build.targets.wheel.force-include]
"grocery_sim/SKUs.xlsx" = "grocery_sim/SKUs.xlsx"
